// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should chain deep sequences correctly 1`] = `"kQCvzKhZj3KKrwzR2CDyTnet7A0Gx0XCX7FupbAZeNg5GI3c"`;

exports[`feature-random should chain deep sequences correctly 2`] = `"kQBTO5rSlP5XMf4n0JIZYY62hjdt5Rdf-Se3O3atljCNHp4P"`;

exports[`feature-random should chain deep sequences correctly 3`] = `"kQA5XRuzsnxmHzPTTQ2sUkoqPuMzkQPRUsiAhRmWkDLYy9HM"`;

exports[`feature-random should chain deep sequences correctly 4`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQCvzKhZj3KKrwzR2CDyTnet7A0Gx0XCX7FupbAZeNg5GI3c",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 15361n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQCvzKhZj3KKrwzR2CDyTnet7A0Gx0XCX7FupbAZeNg5GI3c",
            "to": "kQBTO5rSlP5XMf4n0JIZYY62hjdt5Rdf-Se3O3atljCNHp4P",
            "type": "internal",
            "value": 9971406000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 5`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQCvzKhZj3KKrwzR2CDyTnet7A0Gx0XCX7FupbAZeNg5GI3c",
          "to": "kQBTO5rSlP5XMf4n0JIZYY62hjdt5Rdf-Se3O3atljCNHp4P",
          "type": "internal",
          "value": 9971406000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 13882n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQBTO5rSlP5XMf4n0JIZYY62hjdt5Rdf-Se3O3atljCNHp4P",
            "to": "kQA5XRuzsnxmHzPTTQ2sUkoqPuMzkQPRUsiAhRmWkDLYy9HM",
            "type": "internal",
            "value": 9948462000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 6`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBTO5rSlP5XMf4n0JIZYY62hjdt5Rdf-Se3O3atljCNHp4P",
          "to": "kQA5XRuzsnxmHzPTTQ2sUkoqPuMzkQPRUsiAhRmWkDLYy9HM",
          "type": "internal",
          "value": 9948462000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 13810n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message2",
              "type": "text",
            },
            "bounce": true,
            "from": "kQA5XRuzsnxmHzPTTQ2sUkoqPuMzkQPRUsiAhRmWkDLYy9HM",
            "to": "kQA5XRuzsnxmHzPTTQ2sUkoqPuMzkQPRUsiAhRmWkDLYy9HM",
            "type": "internal",
            "value": 9925778000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message2",
            "type": "text",
          },
          "bounce": true,
          "from": "kQA5XRuzsnxmHzPTTQ2sUkoqPuMzkQPRUsiAhRmWkDLYy9HM",
          "to": "kQA5XRuzsnxmHzPTTQ2sUkoqPuMzkQPRUsiAhRmWkDLYy9HM",
          "type": "internal",
          "value": 9925778000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 4362n,
      },
    ],
  },
]
`;
